# rubytagpp

./: .bzrignore  .gitignore  CMakeLists.txt  GIT-BRANCHES
CMakeModules/: FindRuby.cmake  FindTagLib.cmake
doc/: LICENSE
generator/: class.rb  conversions.hh  description.yml  function.rb  generator.rb  method.rb  namespace.rb
rubytag/: CMakeLists.txt  conversions.h  ruby-taglib.hh
rubytagpp/: CMakeLists.txt  ruby-taglib.hh  rubytagpp.yml
tests/: CMakeLists.txt  converters.rb  custom-tmpfile.rb  emptywave.wav.bz2  test-decompressing.rb  test-fileref.rb  test-flac-id3v1-render.rb  test-flacbasic.rb  test-flacfileref.rb  test-flacproperties.rb  test-flactags.rb  test-flacwrite-id3v1.rb  test-flacwrite-id3v2.rb  test-flacwrite-xiph.rb  test-flacwrite.rb  test-loading.rb  test-mp3-id3v1-render.rb  test-mp3basic.rb  test-mp3fileref.rb  test-mp3properties.rb  test-mp3tags.rb  test-mp3write-ape.rb  test-mp3write-id3v1.rb  test-mp3write-id3v2.rb  test-mp3write.rb  test-mp3writesave.rb  test-mpc-id3v1-render.rb  test-mpcbasic.rb  test-mpcfileref.rb  test-mpcproperties.rb  test-mpctags.rb  test-mpcwrite-ape.rb  test-mpcwrite-id3v1.rb  test-mpcwrite.rb  test-oggbasic.rb  test-oggfields.rb  test-oggflacbasic.rb  test-oggflacfields.rb  test-oggflacfileref.rb  test-oggflacproperties.rb  (+8 more)
