PROJECT(RUBYTAGPP)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeModules ${CMAKE_MODULE_PATH})
SET(GENERATOR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/generator)

FIND_PACKAGE(Ruby REQUIRED)
FIND_PACKAGE(TagLib REQUIRED)

ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/rubytag/rubytagpp.cpp
	COMMAND ${RUBY_EXECUTABLE}
	ARGS -I${GENERATOR_PATH} -C${CMAKE_CURRENT_BINARY_DIR}/rubytag
		${GENERATOR_PATH}/generator.rb ${GENERATOR_PATH}/description.yml
	DEPENDS ${GENERATOR_PATH}/generator.rb ${GENERATOR_PATH}/class.rb
		${GENERATOR_PATH}/method.rb ${GENERATOR_PATH}/namespace.rb
		${GENERATOR_PATH}/description.yml
)

INCLUDE_DIRECTORIES(${TAGLIB_INCLUDE_DIR}/taglib ${RUBY_INCLUDE_PATH})

ADD_LIBRARY(rubytagpp MODULE ${CMAKE_CURRENT_BINARY_DIR}/rubytag/rubytagpp.cpp)
SET_TARGET_PROPERTIES(rubytagpp PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(rubytagpp ${TAGLIB_LIBRARIES})
