PROJECT(RUBYTAGPP)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeModules ${CMAKE_MODULE_PATH})
SET(GENERATOR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/generator)

FIND_PACKAGE(Ruby REQUIRED)

if ( NOT MSVC )
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
   ADD_DEFINITIONS(-DHAVE_VISIBILITY)
endif ( NOT MSVC )

SUBDIRS(rubytagpp tests)
ENABLE_TESTING()
